--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
                                     href="{{ url_for('register')}}">Register</a>
                             </li>
                             {% endif %}
-                            <li class="bnt btn-red">
+                            <li class="btn btn-red">
                                 <a class="nav-link"
                                     href="{{ url_for('contact')}}">Contact</a>
                             </li>
