--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Register</h5>
-        <form action="" method="post">
+        <form action="" method="post" id="registration-form">
           <div class="form-group">
             <label for="Username">Username</label>
             <input name="username" class="form-control required" type="text" minlength="5" maxlength="15"
