--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,7 @@
             <input name="username" class="form-control required" type="text" minlength="5" maxlength="15"
               pattern="^[a-zA-Z0-9]{5,15}$" id="inputUserName" aria-describedby="emailHelp" placeholder="Enter username"
               required>
-              <p id="email-validation-field">&nbsp;&nbsp;</p>
+              <p id="username-validation-field">&nbsp;&nbsp;</p>
             <small id="userName" class="form-text text-muted">Please enter your username</small>
           </div>
           <div class="form-group">
