--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% set active_page = 'register' %}
+{% block title %}| Register{% endblock %}
+
 {% block content %}
 <div class="row justify-content-center form-container">
   <div class="col-sm-12 col-md-8 align-self-center">
