--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% set active_page = 'contact' %}
+{% block title %}| Contact{% endblock %}
+
 {% block content %}
 <div class="container-fluid contact-container">
     <div class="row team-name">
