--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% set active_page = 'profile' %}
+{% block title %}| Profile{% endblock %}
+
 {% block content %}
 <!-- Header -->
 <div class="row">
