fix: edit profile script moved to its own file

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -152,6 +152,7 @@
 
 {% block scripts %}
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/editProfile.js') }}"></script>
 
 
 <!-- Modal for creating event -->
