--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
 {% set active_page = 'login' %}
 {% block content %}
+{% if message  %}
+<div class="row justify-content-center h-100 m-5">
+  <div class="col-sm-12 col-md-4 align-self-center">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">{{ message }}</h5>
+      </div>
+    </div>
+  </div>
+</div>
+{% endif %}
 <div class="row justify-content-center form-container">
   <div class="col-sm-12 col-md-8 align-self-center">
     <div class="card">
