--- a/templates/login.html
+++ b/templates/login.html
@@ -22,6 +22,7 @@
             <label for="InputEmail">Email address</label>
             <input name="email" class="form-control validate" id="InputEmail" type="email" placeholder="Enter email"
               required>
+              <p id="email-validation-field">&nbsp;&nbsp;</p>
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
           <div class="form-group">
@@ -29,6 +30,7 @@
             <input type="password" name="password" class="form-control validate" id="InputPassword" minlength="5"
               maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" placeholder="Password" required>
           </div>
+          <p id="password-repeat-validation-field">&nbsp;&nbsp;</p>
           <button type="submit" class="btn btn-green mt-3">Submit</button>
         </form>
         <div class="card-text mt-3">
