--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Login</h5>
-        <form action="" method="post">
+        <form action="" method="post" id="login-form">
           <div class="form-group">
             <label for="InputEmail">Email address</label>
             <input name="email" class="form-control validate" id="InputEmail" type="email" placeholder="Enter email"
@@ -31,7 +31,7 @@
               maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" placeholder="Password" required>
           </div>
           <p id="password-validation-field">&nbsp;&nbsp;</p>
-          <button type="submit" class="btn btn-green mt-3">Submit</button>
+          <button type="submit" class="btn btn-green mt-3" id="submit-button">Submit</button>
         </form>
         <div class="card-text mt-3">
           <p>Don't have an account? Click the button below to register an account.</p>
