--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
               maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" placeholder="Password" required>
           </div>
           <p id="password-validation-field">&nbsp;&nbsp;</p>
-          <button type="submit" class="btn btn-green mt-3" id="submit-button">Submit</button>
+          <button type="submit" class="btn btn-green mt-3" id="login-submit">Submit</button>
         </form>
         <div class="card-text mt-3">
           <p>Don't have an account? Click the button below to register an account.</p>
