added container height and scroll for upcoming and previous events

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -147,6 +147,8 @@ gap: 15px;
     color: #333;
     border: 2px solid #333;
     height: 5rem;
+    min-height: 15rem;
+    overflow: scroll;
 }
 
 .custom-button {
