Replaced uerDoc with user for regsitration

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="col-12 col-md-2 col-lg-3">
-                <form method="POST" action="{{ url_for('add_to_family', user_id=userDoc['_id'])}}">
+                <form method="POST" action="{{ url_for('add_to_family', user_id=user['_id'])}}">
                     <h3 class="x-mas-text text-center">Join a new family</h3>
                     <div class="row justify-content-center">
                         <select class="mx-auto" name="all_families_name" id="all_families_name">
