--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,6 +19,7 @@
             <img src="{{ url_for('static', filename='images/placeholder-user.jpg') }}" alt="User avatar" class="col-12 user-avatar mt-5 box-shadow">
             <button class="custom-button blue-button col-6 mt-3" onclick="showEdit();">
                 Edit Profile
+                <i class="fas fa-cog"></i>
             </button>
         </div>
         <div class="row justify-content-center">
@@ -69,12 +70,15 @@
                     <div class="text-center">
                         <button type="button" class="mt-3 green-button custom-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             Create A New Event
+                            <i class="fas fa-calendar-week"></i>
                         </button>
                         <button class="custom-button magenta-button col-6" data-bs-toggle="modal" data-bs-target="#familyModal">
                             Create Family
+                            <i class="fas fa-user-friends"></i>
                         </button>
                         <button class="custom-button magenta-button col-6" data-bs-toggle="modal" data-bs-target="#bringDish">
                             Bring Dish
+                            <i class="fas fa-utensils"></i>
                         </button>
                     </div>
             </div>
@@ -88,7 +92,7 @@
                                 <option value="{{family.name}}">{{family.name}}</option>
                             {% endfor %}
                         </select>
-                        <button type="submit" class="teal-button custom-button mt-3">Join Family</button>
+                        <button type="submit" class="teal-button custom-button mt-3">Join Family<i class="fas fa-people-arrows"></i></button>
                     </div>
                 </form>
             </div>
