fix: add event now searches correct key

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -315,7 +315,7 @@
 
                         <div class="form-group">
                             <fieldset class="mt-1">
-                                <legend for="event_description" style="margin-bottom: 0;">Family</legend>
+                                <legend for="event_description" style="margin-bottom: 0;">Event</legend>
                                 <select name="event_id" id="event_id" class="px-5">
                                     {% for event in bring_dish_events_list %}
                                         <option value="{{ event[0] }}">{{ event[1] }}</option>
