--- a/static/css/style.css
+++ b/static/css/style.css
@@ -195,7 +195,13 @@ gap: 15px;
 
 /* --------------- Contact */
 .contact-container {
-    color: #fafafa;
+    color: #F9FCFB;
+}
+
+.team-name {
+    margin-top: 20px;
+    color: #F9FCFB;
+    text-shadow: 2px 2px #000;
 }
 
 .member-row {
@@ -203,7 +209,7 @@ gap: 15px;
     margin: 20px;
     padding: 15px;
     border-radius: 25px;
-    border: 2px solid #fafafa
+    border: 2px solid #F9FCFB;
 }
 
 .member-row .row {
@@ -211,7 +217,7 @@ gap: 15px;
 }
 
 .member-name hr {
-    border: 2px solid #fafafa;
+    border: 2px solid #F9FCFB;
     border-radius: 2px;
     opacity: 1;
 }
@@ -222,7 +228,7 @@ gap: 15px;
 
 .member-social a {
     text-decoration: none;
-    color: #fafafa;
+    color: #21BF73;
 }
 
 .member-social a i {
