--- a/templates/profile.html
+++ b/templates/profile.html
@@ -150,6 +150,7 @@
         <div class="row">
             <div class="col-12 event-container mb-5">
 
+                {{ event_name_list }}
                 {% for name in event_name_list %}
 
                     {% if event == "" %}
@@ -215,7 +216,7 @@
                             </select>
                             <select name="date_day" id="date_day">
                                 {% for day in range(1, 32) %}
-                                <option value="{% if loop.index <= 9  %}0{{ loop.index }}{% else %}{{ loop.index }}{% endif %}">{{ day }}</option>
+                                <option value="{% if loop.index <= 9  %}-{{ loop.index }}{% else %}{{ loop.index }}{% endif %}">{{ day }}</option>
                                 {% endfor %}
                             </select>
                             <select name="date_year" id="date_year">
